--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <link href="https://api.fontshare.com/v2/css?f[]=spline-sans@400&f[]=quicksand@700&display=swap" rel="stylesheet" />
+  <link href="https://api.fontshare.com/v2/css?f[]=spline-sans@400,700&f[]=quicksand@700&display=swap"
+    rel="stylesheet" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script type="module" src="/main.js" defer></script>
   <title>Ximbication</title>
@@ -21,9 +22,26 @@
         <p class="divider"></p>
         <h3>ximbica</h3>
       </div>
-      <div class="body">
+      <div class="content">
         <h4>Estudante de moda na universidade de São Paulo, <b>maquiadora profissional</b>.</h4>
       </div>
+    </div>
+  </section>
+  <section id="gallery">
+    <div class="gallery-box">
+      <img src="./public/sample_1.png" alt="Imagem de exemplo 1"></img>
+    </div>
+
+    <div class="gallery-box">
+      <img src="./public/sample_1.png" alt="Imagem de exemplo 1"></img>
+    </div>
+
+    <div class="gallery-box">
+      <img src="./public/sample_1.png" alt="Imagem de exemplo 1"></img>
+    </div>
+
+    <div class="gallery-box">
+      <img src="./public/sample_1.png" alt="Imagem de exemplo 1"></img>
     </div>
   </section>
 </body>
