--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://api.fontshare.com/v2/css?f[]=spline-sans@400,700&f[]=quicksand@700&display=swap"
     rel="stylesheet" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script type="module" src="/main.js" defer></script>
+  <script type="module" src="/src/main.js" defer></script>
   <link rel="stylesheet" href="/style.css" />
   <title>Ximbication</title>
 </head>
