--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <h4>Estudante de moda na universidade de São Paulo, <b>maquiadora profissional</b>.</h4>
       </div>
     </div>
+      <div id="placeholder"></div>
   </section>
   <section id="gallery">
     <div class="gallery-box">
