Finish up some styles and add links

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     rel="stylesheet" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script type="module" src="/src/main.js" defer></script>
+  <script src="https://kit.fontawesome.com/570fc1f186.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/style.css" />
   <title>Ximbication</title>
 </head>
@@ -21,13 +22,26 @@
       <div class="name-box">
         <h3>Gabriela Brás</h3>
         <p class="divider"></p>
-        <h3>ximbica</h3>
+        <h4>Maquiadora profissional</h4>
       </div>
       <div class="content">
-        <h4>Estudante de moda na universidade de São Paulo, <b>maquiadora profissional</b>.</h4>
+        <h5>Estudante de moda na universidade de São Paulo, <b>maquiadora profissional</b>.</h5>
       </div>
     </div>
-      <div id="placeholder"></div>
+    <div id="placeholder"></div>
+  </section>
+  <section id="links">
+    <div class="flex-center col-8">
+      <a href="http://bit.ly/32aTtHU" target="_blank">
+        <i class="fa-brands fa-square-whatsapp"></i>
+      </a>
+      <a href="https://www.instagram.com/ximbication/" target="_blank">
+        <i class="fa-brands fa-square-instagram"></i>
+      </a>
+      <a href="https://www.behance.net/gabrielabras" target="_blank">
+        <i class="fa-brands fa-square-behance"></i>
+      </a>
+    </div>
   </section>
   <section id="gallery">
     <div class="gallery-box">
