--- a/index.html
+++ b/index.html
@@ -31,7 +31,25 @@
     <div id="placeholder"></div>
   </section>
   <section id="links">
-    <div class="flex-center col-8">
+    <div class="links-container flex-center col-8">
+      <div class="star">
+        <i class="fa-solid fa-star"></i>
+      </div>
+      <div class="star">
+        <i class="fa-solid fa-star"></i>
+      </div>
+      <div class="star">
+        <i class="fa-solid fa-star"></i>
+      </div>
+      <div class="star">
+        <i class="fa-solid fa-star"></i>
+      </div>
+      <div class="star">
+        <i class="fa-solid fa-star"></i>
+      </div>
+      <div class="star">
+        <i class="fa-solid fa-star"></i>
+      </div>
       <a href="http://bit.ly/32aTtHU" target="_blank">
         <i class="fa-brands fa-square-whatsapp"></i>
       </a>
