Add fixed top bar with functionalitty

--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 </head>
 
 <body>
+  <!-- remove when making dinamic top bar -->
+  <div class="top-bar sticky">
+    <h3 class="mx-16">Gabriela Brás</h3>
+    <a class="contact-button mx-16" href="#placeholder">
+      <h6>entrar em contato</h6>
+    </a>
+  </div>
+  <div id="placeholder"></div>
+  <!-- remove end here -->
   <section id="hero">
     <div class="profile-picture">
       <img src="./public/profile.jpg" alt="Imagem de perfil da Ximbica"></img>
@@ -28,7 +37,6 @@
         <h5>Estudante de moda na universidade de São Paulo, <b>maquiadora profissional</b>.</h5>
       </div>
     </div>
-    <div id="placeholder"></div>
   </section>
   <section id="links">
     <div class="links-container flex-center col-8">
