Change images order and polish up styles

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
   <script type="module" src="/src/main.js" defer></script>
   <script src="https://kit.fontawesome.com/570fc1f186.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/style.css" />
-  <title>Ximbication</title>
+  <title>Gabriela Brás</title>
+
+  <!-- SEO stuff -->
+  <meta name="description"
+    content="Gabriela Brás, estudante de moda na USP. Maquiagem editorial, social e artística na região de São Paulo.">
+
+  <meta name="keywords"
+    content="maquiagem, maquiagem profissional, maquiadora, maquiadora em são paulo, maquiagem editorial, maquiagem artística, maquiagem social, maquiadora sp">
 </head>
 
 <body>
@@ -25,7 +32,7 @@
   <!-- remove end here -->
   <section id="hero">
     <div class="profile-picture">
-      <img src="./public/profile.jpg" alt="Imagem de perfil da Ximbica"></img>
+      <img src="./public/profile.jpg" alt="Foto da Grabriela"></img>
     </div>
     <div class="description-box">
       <div class="name-box">
@@ -34,7 +41,7 @@
         <h4>Maquiadora profissional</h4>
       </div>
       <div class="content">
-        <h5>Estudante de moda na universidade de São Paulo, <b>maquiadora profissional</b>.</h5>
+        <h5>Estudante de moda na USP. <b>Maquiagem editorial, social e artística</b> na região de São Paulo.</h5>
       </div>
     </div>
   </section>
