--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/png" href="/favicon-32x32.png" />
   <link href="https://api.fontshare.com/v2/css?f[]=spline-sans@400,700&f[]=quicksand@700&display=swap"
     rel="stylesheet" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -32,7 +32,7 @@
   <!-- remove end here -->
   <section id="hero">
     <div class="profile-picture">
-      <img src="./public/profile.jpg" alt="Foto da Grabriela"></img>
+      <img src="/profile.jpg" alt="Foto da Grabriela"></img>
     </div>
     <div class="description-box">
       <div class="name-box">
