Tweak links section highlight

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script type="module" src="/src/main.js" defer></script>
   <script src="https://kit.fontawesome.com/570fc1f186.js" crossorigin="anonymous"></script>
+  <script src="https://unpkg.com/scrollreveal@4"></script>
   <link rel="stylesheet" href="/style.css" />
   <title>Gabriela Brás</title>
 
@@ -24,7 +25,7 @@
   <!-- remove when making dinamic top bar -->
   <div class="top-bar sticky">
     <h3 class="mx-16">Gabriela Brás</h3>
-    <a class="contact-button mx-16" href="#placeholder">
+    <a class="contact-button mx-16">
       <h6>entrar em contato</h6>
     </a>
   </div>
@@ -47,24 +48,24 @@
   </section>
   <section id="links">
     <div class="links-container flex-center col-8">
-      <div class="star">
-        <i class="fa-solid fa-star"></i>
-      </div>
-      <div class="star">
-        <i class="fa-solid fa-star"></i>
-      </div>
-      <div class="star">
-        <i class="fa-solid fa-star"></i>
-      </div>
-      <div class="star">
-        <i class="fa-solid fa-star"></i>
-      </div>
-      <div class="star">
-        <i class="fa-solid fa-star"></i>
-      </div>
-      <div class="star">
-        <i class="fa-solid fa-star"></i>
-      </div>
+      <!-- <div class="star"> -->
+      <!--   <i class="fa-solid fa-star"></i> -->
+      <!-- </div> -->
+      <!-- <div class="star"> -->
+      <!--   <i class="fa-solid fa-star"></i> -->
+      <!-- </div> -->
+      <!-- <div class="star"> -->
+      <!--   <i class="fa-solid fa-star"></i> -->
+      <!-- </div> -->
+      <!-- <div class="star"> -->
+      <!--   <i class="fa-solid fa-star"></i> -->
+      <!-- </div> -->
+      <!-- <div class="star"> -->
+      <!--   <i class="fa-solid fa-star"></i> -->
+      <!-- </div> -->
+      <!-- <div class="star"> -->
+      <!--   <i class="fa-solid fa-star"></i> -->
+      <!-- </div> -->
       <a href="http://bit.ly/32aTtHU" target="_blank">
         <i class="fa-brands fa-square-whatsapp"></i>
       </a>
