Fix pointer on home links

--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
 <body>
   <!-- remove when making dinamic top bar -->
   <div class="top-bar sticky">
-    <h3 class="mx-16">Gabriela Brás</h3>
+    <a class="home-button">
+      <h3 class="pointer mx-16">Gabriela Brás</h3>
+    </a>
     <a class="contact-button mx-16">
-      <h6>entrar em contato</h6>
+      <h6 class="pointer">entrar em contato</h6>
     </a>
   </div>
   <div id="placeholder"></div>
